Update ignored folders.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ migrate_working_dir/
 # VSCode related
 .vscode/
 
+# KDevelop related
+.kdev4/
+
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
